Changes from 4.3.x -> 4.4-alpha
===========================================

* Support for IPv6 and TLS connections in xymond and xymon
* Support for message compression has been added
* Standardize command line options across most binaries
* Refactoring of TCP code in preparation for IPv6/SSL support
* Remove obsolete "meta" message support
* Global --sendtimeout option introduced to allow control over
  sendmsg() timeout periods. Can be controlled with XYMONTIMEOUT
  environment variable
* xymond_client and xymond_rrd idle and combo flush timeouts
  can be controlled with an --idletimeout option, or the IDLETIMEOUT
  environment variable.
* Attempt to get a more accurate clock delta when a client message has been
  sent through a xymonproxy
* xymonlaunch: Add support for specifying a PIDFILE in tasks.cfg or 
  clientlaunch.cfg
* xymonlaunch: Add SENDHUP support for optionally passing along signals 
  to running
* xymonlaunch: Add DELAY keyword for delaying initial task startup
* xymonlaunch: Add FAILDELAY keyword for configuring backoff period
  after too many (5) non-zero exit errors. Failure count is also 
  cleared after this period passes without issue.
* Support and display "TEXT=Human readable" tags for LOG entries in 
  analysis.cfg on msgs
* A 'proxyping' command has been added for checking that a xymonproxy 
  server itself is up
* Recipients of 'RECOVERED' alert messages will now also receive 
  them if the host/service has been dropped or the alert became stale
  (recovered while xymond_alert was not running), not just if the
  test has been disabled.
* xymond_channel can now send to multiple local workers at once, and/or
  rotate message submission to multiple copies of local workers with the
  --multilocal and/or --multirun options.
* xymond_channel can wait for a configurable amount of time after launching
  a worker before sending it messages, to give it time to initialize.
* xymond_channel will now attempt to finish sending any messages that 