@@ -6,6 +6,7 @@ Changes from 4.3.x -> 4.4-alpha
 * Standardize command line options across most binaries
 * Refactoring of TCP code in preparation for IPv6/SSL support
 * Remove obsolete "meta" message support
+* POSIX btree functions are used if available on the platform
 * Global --sendtimeout option introduced to allow control over
   sendmsg() timeout periods. Can be controlled with XYMONTIMEOUT
   environment variable
